force-app/main/default/objects/SBQQ__ProductAction__c/fields/SBQQ__FilterValue__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__FilterValue__c</fullName>
        <description>The value that will be updated in the chosen Filter Field.</description>
        <inlineHelpText>Enter the value to be updated in the chosen Filter Field.</inlineHelpText>
        <label>Filter Value</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>