force-app/main/default/objects/SBQQ__ProductAction__c/fields/SBQQ__Operator__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Operator__c</fullName>
        <description>The operator that determines how the Filter Field will be applied to the Filter Value.</description>
        <inlineHelpText>Choose the operator that determines how the Filter Field will apply to the Filter Value.</inlineHelpText>
        <label>Operator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>equals</fullName>
                </value>
                <value>
                    <fullName>not equals</fullName>
                </value>
                <value>
                    <fullName>starts with</fullName>
                </value>
                <value>
                    <fullName>contains</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>