force-app/main/default/objects/SBQQ__ProductAction__c/fields/SBQQ__Required__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines whether the product in the Product Lookup field will be selected on the quote.</description>
        <inlineHelpText>Select if you want the product in the Product Lookup field to be selected on the quote.</inlineHelpText>
        <label>Required</label>
        <type>Checkbox</type>
    </CustomField>