force-app/main/default/objects/SBQQ__ProductAction__c/fields/SBQQ__Rule__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Rule__c</fullName>
        <description>Rule that runs this product action.</description>
        <inlineHelpText>Rule that runs this product action.</inlineHelpText>
        <label>Rule</label>
        <referenceTo>SBQQ__ProductRule__c</referenceTo>
        <relationshipLabel>Actions</relationshipLabel>
        <relationshipName>Actions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </CustomField>