force-app/main/default/objects/SBQQ__ProductAction__c/fields/SBQQ__ValueAttribute__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__ValueAttribute__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to identify the specific attribute if the Value Field is a global Configuration Attribute field.</description>
        <inlineHelpText>Used to identify the specific attribute if the Value Field is a global Configuration Attribute field.</inlineHelpText>
        <label>Value Attribute</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.SBQQ__ValueField__c</field>
                <operation>equals</operation>
                <valueField>SBQQ__ProductAttribute__c.SBQQ__Attribute__r.SBQQ__TargetField__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SBQQ__ProductAttribute__c</referenceTo>
        <relationshipLabel>Product Actions</relationshipLabel>
        <relationshipName>ProductActions</relationshipName>
        <type>Lookup</type>
    </CustomField>