force-app/main/default/objects/SBQQ__ProductAction__c/fields/SBQQ__ValueField__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__ValueField__c</fullName>
        <description>This field will be used instead of the Filter Value when compared with the Filter Field.</description>
        <inlineHelpText>Compares the Filter Field with this field instead of the Filter Value.</inlineHelpText>
        <label>Value Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product Code</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>